codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__plan_completion_waits_for_input.snap
---
source: tui/src/chatwidget/tests/plan_mode.rs
expression: popup
---
 ┃ Ask Codex to do anything

  gpt-5 medium · /tmp/project                   Plan mode (shift+tab to cycle)
